travis/test/vex.stderr
./travis/test/vex.asm:8: error: specific encoding scheme not available