travis/test/vex.bin.t
b▒Щ/геЫ/аеЫ/адАy/аbЯЩ/а